0. 버전업 (190718 => 200227) 1. 파일시스템에 로그 쓰지 않도록 수정 2. 제외할 패스(Path To Exlude) 항목 추가 3. 인코딩 타입(Charset) 추가 4. 검색결과 새 창(AlertForm)으로 뜨도록 수정

--- a/BBSearchHelper/default.properties
+++ b/BBSearchHelper/default.properties
@@ -1,2 +1,5 @@
-defaultFolderPath=C:\
-defaultExtension=*
+defaultFolderPath=C:\NANUM\workspaces\E-SMBC
+defaultPathToExclude=*/brmroot/*
+defaultExtension=config,xml,properties
+defaultTextToSearch=dev.nanum.co.kr
+defaultCharset=UTF-8
