옵션파일 기본값 수정

--- a/BBSearchHelper/default.properties
+++ b/BBSearchHelper/default.properties
@@ -1,5 +1,5 @@
-defaultFolderPath=C:\NANUM\workspaces\E-SMBC
-defaultPathToExclude=*/brmroot/*
-defaultExtension=config,xml,properties
-defaultTextToSearch=dev.nanum.co.kr
+defaultFolderPath=C:\
+defaultPathToExclude=
+defaultExtension=*
+defaultTextToSearch=
 defaultCharset=UTF-8
